updated pageLayout to have min height and not overflow, fixed propTypes warning, aded AcademyWrapper, eddited route imports

--- a/src/layout/pageLayout/pageLayout.scss
+++ b/src/layout/pageLayout/pageLayout.scss
@@ -3,5 +3,7 @@
 .page-layout {
   margin: 0 auto;
   max-width: $max-page-width;
+  min-height: calc(100vh - (96px + 96px));
+  overflow-y: hidden;
   padding: 0 to-rem(80);
 }
